Corrected pom, fixed getResources problem in Game,Board and PlayerCard